[metadata]
name = pywaggle
version = 0.0.0
author = Sean Shahkarami
author_email = sean.shahkarami@gmail.com
description = Official Waggle Python module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waggle-sensor/pywaggle
project_urls =
    Bug Tracker = https://github.com/waggle-sensor/pywaggle/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    pika>=1.2.0
    pywagglemsg>=0.4.0
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
audio =
    numpy>=1.18.0
    soundcard>=0.4.1
    soundfile>=0.9.0
vision =
    numpy>=1.18.0
    opencv-python>=4.5.0
all =
    numpy>=1.18.0
    soundcard>=0.4.1
    soundfile>=0.9.0
    opencv-python>=4.5.0
